eww/.config/eww/eww.scss
* {
  all: unset;
  font-family: "Adwaita Sans";
  font-size: 14px;
}

.bar {
  background: #0a0a0a;
  padding: 3px 16px;
  min-height: 28px;
}

.workspace {
  color: #ccccdd;
  font-size: 14px;
  padding: 4px 14px;
  border-radius: 12px;
}

.workspace:hover {
  color: #bbbbc8;
}

.workspace.active {
  background: #b8b8c4;
  color: #0a0a0a;
  border-radius: 12px;
  font-weight: 600;
}

.date {
  color: #bbbbcc;
  font-size: 14px;
  min-height: 28px;
}

.stat {
  color: #aaaacc;
  font-size: 13px;
  min-height: 28px;
}

.icon {
  font-family: "Symbols Nerd Font Mono";
  font-size: 14px;
  color: #aaaacc;
  min-height: 28px;
}

